--- a/css/forms/toggle.scss
+++ b/css/forms/toggle.scss
@@ -24,7 +24,7 @@
             border           : 1px solid oklch(var(--totalform-border-color));
             border-radius    : 60px;
             text-indent      : -9999px;
-            background-color : oklch(var(--totalform-background));
+            background-color : oklch(var(--totalform-lightgray));
 
             -webkit-tap-highlight-color: transparent;
 
